--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Neshan's Weather App</title>
 </head>
 
 <body>
-
+    <input type="text" id="inpt"> <br>
+    <button id="btn">Get Weather</button>
+    <div id="weather"></div>
+    <script src="script.js"></script>
 </body>
 
 </html>
