--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Neshan's Weather App</title>
+    <title>Weather App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <input type="text" id="inpt"> <br>
-    <button id="btn">Get Weather</button>
-    <div id="weather"></div>
-    <script src="script.js"></script>
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="Enter city name" spellcheck="false">
+            <button><img src="images/search.png"></button>
+        </div>
+    </div>
 </body>
 
 </html>
